[gd_scene load_steps=6 format=3 uid="uid://b5ib6052yah38"]

[ext_resource type="Script" path="res://Crafting_UI/Crafting.gd" id="1_uivi2"]
[ext_resource type="VideoStream" path="res://Crafting_UI/UI_Screen_assets/Full_crafting_UI_animated.ogv" id="2_6m3we"]
[ext_resource type="Texture2D" uid="uid://bp4x1ghrrbhg4" path="res://Crafting_UI/UI_Screen_assets/frame.png" id="3_8b0nl"]
[ext_resource type="Texture2D" uid="uid://c07avbbfc8h3q" path="res://Crafting_UI/UI_Screen_assets/screen_off.png" id="4_rv1pw"]
[ext_resource type="Texture2D" uid="uid://dbtyqffmngk2t" path="res://Crafting_UI/UI_Screen_assets/Screen_on.png" id="5_a0vgm"]

[node name="CraftingTab" type="Node2D"]
script = ExtResource("1_uivi2")

[node name="CraftButton" type="Button" parent="."]
offset_left = -813.0
offset_top = 358.0
offset_right = -582.0
offset_bottom = 424.0
action_mode = 0
text = "Craft
"

[node name="SpaceSuit" type="Button" parent="CraftButton"]
layout_mode = 0
offset_left = 5.0
offset_top = -303.0
offset_right = 236.0
offset_bottom = -237.0
action_mode = 0
text = "Space Suit"

[node name="HazmatSuit" type="Button" parent="CraftButton"]
layout_mode = 0
offset_left = 7.0
offset_top = -141.0
offset_right = 238.0
offset_bottom = -75.0
text = "Hazmat Suit
"

[node name="Crowbar" type="Button" parent="CraftButton"]
layout_mode = 0
offset_left = 248.0
offset_top = -305.0
offset_right = 479.0
offset_bottom = -239.0
text = "Crowbar
"

[node name="MedkitCharge" type="Button" parent="CraftButton"]
layout_mode = 0
offset_left = 253.0
offset_top = -222.0
offset_right = 484.0
offset_bottom = -156.0
text = "MedkitCharge
"

[node name="DehySpaceFood" type="Button" parent="CraftButton"]
layout_mode = 0
offset_left = 5.0
offset_top = -219.0
offset_right = 236.0
offset_bottom = -153.0
text = "DehySpaceFood"

[node name="LaserGun" type="Button" parent="CraftButton"]
layout_mode = 0
offset_left = 504.0
offset_top = -306.0
offset_right = 735.0
offset_bottom = -240.0
text = "LaserGun"

[node name="FreDriSpaceFood" type="Button" parent="CraftButton"]
layout_mode = 0
offset_left = 504.0
offset_top = -222.0
offset_right = 735.0
offset_bottom = -156.0
text = "FreDriSpaceFood"

[node name="addRes" type="Button" parent="."]
offset_left = -547.0
offset_top = 355.0
offset_right = -316.0
offset_bottom = 421.0
action_mode = 0
text = "AddRes
"

[node name="CheckRes" type="Button" parent="."]
offset_left = -292.0
offset_top = 356.0
offset_right = -61.0
offset_bottom = 422.0
action_mode = 0
text = "CheckRes"

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
z_index = 2
offset_left = 152.0
offset_top = 51.0
offset_right = 836.0
offset_bottom = 535.0
stream = ExtResource("2_6m3we")
autoplay = true
expand = true
loop = true

[node name="Frame" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(495, 295)
scale = Vector2(0.189062, 0.189062)
texture = ExtResource("3_8b0nl")

[node name="ScreenOff" type="Sprite2D" parent="."]
position = Vector2(492, 292)
scale = Vector2(0.188971, 0.188971)
texture = ExtResource("4_rv1pw")

[node name="ScreenOn" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(494.861, 295.875)
scale = Vector2(0.180974, 0.180974)
texture = ExtResource("5_a0vgm")

[connection signal="pressed" from="CraftButton" to="." method="craft_button_pressed"]
[connection signal="pressed" from="CraftButton/SpaceSuit" to="." method="space_suit_pressed"]
[connection signal="pressed" from="CraftButton/HazmatSuit" to="." method="hazmat_suit_pressed"]
[connection signal="pressed" from="CraftButton/Crowbar" to="." method="crowbar_pressed"]
[connection signal="pressed" from="CraftButton/MedkitCharge" to="." method="medkit_charge_pressed"]
[connection signal="pressed" from="CraftButton/DehySpaceFood" to="." method="_on_dehy_space_food_pressed"]
[connection signal="pressed" from="CraftButton/LaserGun" to="." method="laser_gun_pressed"]
[connection signal="pressed" from="CraftButton/FreDriSpaceFood" to="." method="fre_dri_space_food_pressed"]
[connection signal="pressed" from="addRes" to="." method="add_res_pressed"]
[connection signal="pressed" from="CheckRes" to="." method="check_res_pressed"]
